# mlops_project_KarimOsmani_HusseinHamede

./: .gitignore  Dockerfile  README.md  pyproject.toml  tasks.py
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
config/: config.yaml  config_dev.yaml  config_prod.yaml
docs/: index.html  project.html  search.js
docs/project/: config.html  data_loader.html  data_transform.html  main.html  model.html
ml_project/: pyproject.toml
ml_project/config/: config.yaml  config_dev.yaml  config_prod.yaml
ml_project/data/: iphone.csv
ml_project/docs/: index.html  ml_project.html  search.js
ml_project/docs/ml_project/: config.html  data_loader.html  data_transform.html  main.html  model.html
ml_project/src/ml_project/: config.py  data_loader.py  main.py  pyproject.toml
ml_project/src/ml_project/data_loader/: __init__.py  base_loader.py  dataframe_loader.py
ml_project/src/ml_project/data_transform/: __init__.py
ml_project/src/ml_project/model/: __init__.py  factory.py
ml_project/tests/: test_data_loader.py  test_data_transformer.py  test_model.py
mlruns/0/: meta.yaml
mlruns/249278258122251932/: meta.yaml
mlruns/249278258122251932/7d419732b4004f1194d9228321e9f860/: meta.yaml
mlruns/249278258122251932/7d419732b4004f1194d9228321e9f860/artifacts/random_forest_model/: MLmodel  conda.yaml
mlruns/249278258122251932/7d419732b4004f1194d9228321e9f860/metrics/: 1_f1-score  1_precision  1_recall  1_support  2_f1-score  2_precision  2_recall  2_support  3_f1-score  3_precision  3_recall  3_support  4_f1-score  4_precision  4_recall  4_support  5_f1-score  5_precision  5_recall  5_support  accuracy  macro avg_f1-score  macro avg_precision  macro avg_recall  macro avg_support  weighted avg_f1-score  weighted avg_precision  weighted avg_recall  weighted avg_support
mlruns/249278258122251932/7d419732b4004f1194d9228321e9f860/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
prometheus/: alert.rules.yml  prometheus.yml
src/project/: config.py  main.py
src/project/data_loader/: __init__.py  csv_loader.py  factory.py  json_loader.py
src/project/data_transform/: base_transformer.py  factory.py  text_numeric_transformer.py
src/project/mlruns/0/: meta.yaml
src/project/mlruns/367979726353694359/: meta.yaml
src/project/mlruns/367979726353694359/1756d2dd9d6c47a59dcc220edea23aed/: meta.yaml
src/project/mlruns/367979726353694359/1756d2dd9d6c47a59dcc220edea23aed/metrics/: 1_f1-score  1_precision  1_recall  1_support  2_f1-score  2_precision  2_recall  2_support  3_f1-score  3_precision  3_recall  3_support  4_f1-score  4_precision  4_recall  4_support  5_f1-score  5_precision  5_recall  5_support  accuracy  macro avg_f1-score  macro avg_precision  macro avg_recall  (+5 more)
src/project/model/: random_forest_model.py
tests/: test_data_loader.py  test_data_transform.py  test_model.py
(+4 files in other folders)
