[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["karim-osmani <karimosmani10@gmail.com>", "Hussein Hamade <hmhamade99@gmail.com>"]
readme = "README.md"
packages = [{include = "project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.0"
scikit-learn = "^1.6.0"
omegaconf = "^2.3.0"
pydantic = "^2.10.3"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.1"
mypy = "^1.13.0"
ruff = "^0.8.3"
pytest = "^8.3.4"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project_ = "project.main:main"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F"] # Specify the types of rules to enforce
ignore = ["E501"] # Ignore line length warnings

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.
indent-style = "space" # Like Black, indent with spaces, rather than tabs.