[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["karim-osmani <karimosmani10@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.1"
scikit-learn = "^1.6.0"
omegaconf = "^2.3.0"
pydantic = "^2.10.4"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.1"
mypy = "^1.14.0"
ruff = "^0.8.4"
pytest = "^8.3.4"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ml_project_ = "ml_project.main:main"
